# projet_python_2_mba

./: .dockerignore  .flake8  .gitignore  CHECKLIST_SOUMISSION.md  CONFORMITE_ESG_MBA.md  COVERAGE_IMPROVEMENT.md  DOCKER.md  DOCKER_VERIFICATION.md  DOWNLOAD_DATA.md  Dockerfile  EVALUATION_ESG_MBA.md  GUIDE_EVALUATION_PROF.md  INSTALLATION.md  INSTRUCTIONS_PULL_REQUEST.md  LICENSE  MANIFEST.in  PROJECT_CHECKLIST.md  QUICKSTART.md  README.md  build_package.ps1  create_pull_request.ps1  docker-compose.yml  mypy.ini  pre_evaluation_check.ps1  pyproject.toml  quick_test.ps1  rapport_test_routes.html  requirements.txt  setup.py  setup_and_run.ps1  test_20_routes.ps1  test_all_20_endpoints.py  test_all_routes.ps1  test_esgi_spec.ps1  test_partie5_tests.ps1  test_routes.py  test_services_partie4.ps1  test_simple.py
.github/workflows/: ci-cd.yml
src/banking_api/: __init__.py  config.py  data_manager.py  main.py  models.py
src/banking_api/routes/: customers.py  fraud.py  stats.py  system.py  transactions.py
src/banking_api/services/: customer_service.py  fraud_detection_service.py  stats_service.py  system_service.py  transactions_service.py
tests/: conftest.py  test_coverage_improvement.py  test_customers_routes.py  test_features.py  test_features_old.py.bak  test_fraud_routes.py  test_services.py  test_stats_routes.py  test_system_routes.py  test_transactions_routes.py
